--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@presentation/*": ["./src/presentation/*"],
+      "@main/*": ["./src/main/*"]
     }
   },
   "include": ["src"]
