--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,8 +22,12 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
+      "@application/*": ["./src/application/*"],
+      "@domain/*": ["./src/domain/*"],
+      "@infra/*": ["./src/infra/*"],
       "@main/*": ["./src/main/*"],
-      "@presentation/*": ["./src/presentation/*"]
+      "@presentation/*": ["./src/presentation/*"],
+      "@test/*": ["./src/test/*"]
     }
   },
   "include": ["src"]
